--- a/app/scss/layout/_hero.scss
+++ b/app/scss/layout/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: 50%;
+    background-position: 50% 80%;
     &__title {
         font-size: 3.7rem;
         font-weight: 600;
