--- a/app/scss/components/_button.scss
+++ b/app/scss/components/_button.scss
@@ -3,19 +3,24 @@ $btn-br: 10px;
 
 .btn {
     display: inline-block;
-    padding: 1.55em 2.2em;
+    padding: 1.4em 2em;
     text-decoration: none;
     font-weight: 500;
     color: $white;
     background: $primary;
     border-radius: $btn-br;
     text-align: center;
+    font-size: 1.8rem;
     &_is {
         &-colored {
             background: $secondary;
         }
     }
     &_size {
+        &-s {
+            font-size: 1.6rem;
+            padding: 1.55em 2.2em;
+        }
         &-m {
             font-size: 2rem;
             padding: 1em 2em;
