--- a/app/scss/components/_make-help-form.scss
+++ b/app/scss/components/_make-help-form.scss
@@ -1,12 +1,20 @@
 .make-help-form {
     &__radio {
         &:nth-child(n) {
+            width: 100px;
             margin: 0;
             margin-right: 20px;
             margin-bottom: 30px;
         }
         &:nth-child(4) {
             margin-right: 0;
+        }
+    }
+    & .form {
+        &__value {
+            &-input {
+                width: 100%;
+            }
         }
     }
 }
