--- a/app/scss/layout/_text-section.scss
+++ b/app/scss/layout/_text-section.scss
@@ -3,3 +3,12 @@
         padding-right: 70px;
     }
 }
+
+// MEDIA
+@media screen and (max-width: 991px) {
+    .text-section {
+        &__content {
+            padding-right: 0;
+        }
+    }
+}
