--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -142,7 +142,8 @@ $utilities: map-get-multiple(
   'components/pagination',
   'components/checkbox',
   'components/make-help-form',
-  'components/team-item';
+  'components/team-item',
+  'components/m-menu-btn';
 
 // 6. Page-specific styles
 @import
