--- a/app/scss/components/_button.scss
+++ b/app/scss/components/_button.scss
@@ -30,3 +30,28 @@ $btn-br: 10px;
         opacity: .85;
     }
 }
+
+// MEDIA
+@media screen and (max-width: 991px) {
+    .btn {
+        &_size {
+            &-s {
+                font-size: 1.2rem;
+                padding: 1.5em 2.1em;
+            }
+            &-m {
+                font-size: 1.8rem;
+                padding: 1.4em 2em;
+            }
+        }
+    }
+}
+@media screen and (max-width: 575px) {
+    .btn {
+        &_size {
+            &-s {
+                padding: 1.5em 1.2em;
+            }
+        }
+    }
+}
