--- a/app/scss/components/_form.scss
+++ b/app/scss/components/_form.scss
@@ -111,3 +111,38 @@ $form-input-br: 8px;
         margin-top: 30px;
     }
 }
+
+// MEDIA
+@media screen and (max-width: 991px) {
+    .form {
+        &__radio {
+            height: 55px;
+            width: calc((100% - 40px) / 3);
+            &:nth-child(n) {
+                margin-right: 20px;
+            }
+            &:nth-child(3n) {
+                margin-right: 0;
+            }
+        }
+        &__value {
+            &-input {
+                width: calc(100% / 3);
+                flex: 1 1 auto;
+                height: 55px;
+            }
+        }
+        &__note {
+            font-size: 1.2rem;
+        }
+    }
+}
+@media screen and (max-width: 575px) {
+    .form {
+        &__btn {
+            &.btn {
+                padding: 1.4em 1em;
+            }
+        }
+    }
+}
