--- a/app/scss/components/_lang.scss
+++ b/app/scss/components/_lang.scss
@@ -18,3 +18,12 @@ $lang-br: 6px;
         }
     }
 }
+
+// MEDIA
+@media screen and (max-width: 991px) {
+    .lang {
+        &__link {
+            font-size: 1.2rem;
+        }
+    }
+}
