--- a/app/scss/layout/_hero.scss
+++ b/app/scss/layout/_hero.scss
@@ -36,3 +36,37 @@
         }
     }
 }
+
+// MEDIA
+@media screen and (max-width: 1199px) {
+    .hero {
+        background-position: 50% 10%;
+    }
+}
+@media screen and (max-width: 991px) {
+    .hero {
+        background-position: 70%;
+        &__wrapper {
+            padding: 115px 0;
+            padding-bottom: 25px;
+        }
+        &__footer {
+            margin-top: 175px;
+        }
+        &__title {
+            font-size: 2.5rem;
+        }
+        &__desc {
+            & p {
+                font-size: 1.9rem;
+                max-width: 350px;
+            }
+        }
+        &__btn {
+            border-radius: 5px;
+            &:not(:last-child) {
+                margin-right: 25px;
+            }
+        }
+    }
+}
