--- a/app/scss/layout/_section.scss
+++ b/app/scss/layout/_section.scss
@@ -42,3 +42,43 @@
         margin-top: 50px;
     }
 }
+
+// MEDIA
+@media screen and (max-width: 991px) {
+    .section {
+        &__wrapper {
+            padding: 30px 0;
+            padding-bottom: 35px;
+        }
+        &__title {
+            font-size: 2.4rem;
+            margin-bottom: 20px;
+        }
+        &__content {
+            & p {
+                font-size: 1.4rem;
+                &:not(:last-child) {
+                    margin-bottom: 20px;
+                }
+            }
+        }
+        &__col {
+            &:not(:last-child) {
+                margin-bottom: 35px;
+            }
+            &.order-1 {
+                margin-bottom: 35px;
+            }
+            &.order-2 {
+                margin-bottom: 0;
+            }
+        }
+        &__header {
+            margin-bottom: 25px;
+        }
+        &__note {
+            margin-top: 30px;
+            font-size: 1.3rem;
+        }
+    }
+}
