--- a/app/scss/layout/_section.scss
+++ b/app/scss/layout/_section.scss
@@ -3,6 +3,7 @@
         position: relative;
     }
     &__wrapper {
+        position: relative;
         padding: 55px 0;
         border-bottom: 1px solid $primary-900;
         &_no {
