--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -143,7 +143,8 @@ $utilities: map-get-multiple(
   'components/checkbox',
   'components/make-help-form',
   'components/team-item',
-  'components/m-menu-btn';
+  'components/m-menu-btn',
+  'components/m-layout';
 
 // 6. Page-specific styles
 @import
